# HallOfMusic

./: .gitignore  CMakeLists.txt
cmake/: CompilerSettings.cmake  FetchDependencies.cmake  InternalHelperFunctions.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  UnitTest.cmake
